# Summary

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: config.h
source/: CMakeLists.txt  config.in  main.cpp
source/keyboard/: barchartdlg.cpp  barchartdlg.h  keycounter.cpp  keycounter.h  keytype.cpp  keytype.h
source/mainpanel/: mainpanel.cpp  mainpanel.h  settingdlg.h
source/tools/: confighelper.cpp  confighelper.h  pathhelper.cpp  pathhelper.h
source/utils/: logger.cpp  logger.h
